// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the ToastContainer Component correctly 1`] = `
<div
  className="sc-hMqMXs EfFhp"
>
  <div
    className="sc-kEYyzF jQpFH sc-eNQAEJ YwarW"
  >
    <div
      className="sc-kkGfuU jzSOBF sc-eNQAEJ hbFCXX"
      color="success"
    >
      <i
        className="material-icons  sc-cvbbAY fToWhC"
        color="white"
        onClick={undefined}
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-iAyFgw fmWRJw sc-eNQAEJ ckEjxQ"
    >
      Text
    </div>
    <div
      className="sc-hSdWYo cffHXk sc-eNQAEJ jqCkHy"
    >
      <div
        className="sc-eHgmQL ksMDBF"
      >
        <i
          className="material-icons  sc-cvbbAY dxhemg"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
  <div
    className="sc-kEYyzF jQpFH sc-eNQAEJ YwarW"
  >
    <div
      className="sc-kkGfuU jZLxSH sc-eNQAEJ hbFCXX"
      color="error"
    >
      <i
        className="material-icons  sc-cvbbAY fToWhC"
        color="white"
        onClick={undefined}
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-iAyFgw fmWRJw sc-eNQAEJ ckEjxQ"
    >
      Text
    </div>
    <div
      className="sc-hSdWYo cffHXk sc-eNQAEJ jqCkHy"
    >
      <div
        className="sc-eHgmQL ksMDBF"
      >
        <i
          className="material-icons  sc-cvbbAY dxhemg"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the ToastContainer Component correctly 2`] = `
<div
  className="sc-hMqMXs eooPGR"
>
  <div
    className="sc-kEYyzF jQpFH sc-eNQAEJ YwarW"
  >
    <div
      className="sc-kkGfuU jzSOBF sc-eNQAEJ hbFCXX"
      color="success"
    >
      <i
        className="material-icons  sc-cvbbAY fToWhC"
        color="white"
        onClick={undefined}
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-iAyFgw fmWRJw sc-eNQAEJ ckEjxQ"
    >
      Text
    </div>
    <div
      className="sc-hSdWYo cffHXk sc-eNQAEJ jqCkHy"
    >
      <div
        className="sc-eHgmQL ksMDBF"
      >
        <i
          className="material-icons  sc-cvbbAY dxhemg"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
  <div
    className="sc-kEYyzF jQpFH sc-eNQAEJ YwarW"
  >
    <div
      className="sc-kkGfuU jZLxSH sc-eNQAEJ hbFCXX"
      color="error"
    >
      <i
        className="material-icons  sc-cvbbAY fToWhC"
        color="white"
        onClick={undefined}
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-iAyFgw fmWRJw sc-eNQAEJ ckEjxQ"
    >
      Text
    </div>
    <div
      className="sc-hSdWYo cffHXk sc-eNQAEJ jqCkHy"
    >
      <div
        className="sc-eHgmQL ksMDBF"
      >
        <i
          className="material-icons  sc-cvbbAY dxhemg"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
</div>
`;
